--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <header class="side-menu__header">
         <button class="side-menu__header-menu main-button main-button--exit-item" type="button"></button>
         <a href="#" class="side-menu__logo logo">
-          <img src="../src/img/CPS.svg" alt="Логотип компании" width="96" height="50" class="logo__image">
+          <img src="img/CPS.svg" alt="Логотип компании" width="96" height="50" class="logo__image">
         </a>
         <button class="side-menu__header-menu main-button main-button--search-item" type="button"></button>
       </header>
@@ -186,7 +186,7 @@
           </button>
         </div>
         <img
-          src="/src/img/photo.jpg"
+          src="img/photo.jpg"
           alt="фотография компании"
           class="about__image"
         />
